class SocialSystem added

--- a/norm_formation_abm/norm_formation_abm.vcxproj
+++ b/norm_formation_abm/norm_formation_abm.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="BernoulliDistribution.cpp" />
     <ClCompile Include="norm_formation_abm.cpp" />
     <ClCompile Include="RandIndProbGenerator.cpp" />
+    <ClCompile Include="SocialSystem.cpp" />
     <ClCompile Include="Uniform.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="BernoulliDistribution.h" />
     <ClInclude Include="custom_types.h" />
     <ClInclude Include="RandIndProbGenerator.h" />
+    <ClInclude Include="SocialSystem.h" />
     <ClInclude Include="Uniform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
