--- a/norm_formation_abm/norm_formation_abm.vcxproj
+++ b/norm_formation_abm/norm_formation_abm.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="BernoulliDistribution.cpp" />
     <ClCompile Include="ConformityFunction.cpp" />
     <ClCompile Include="norm_formation_abm.cpp" />
+    <ClCompile Include="Power.cpp" />
     <ClCompile Include="RandIndProbGenerator.cpp" />
     <ClCompile Include="SocialSystem.cpp" />
     <ClCompile Include="Uniform.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="BernoulliDistribution.h" />
     <ClInclude Include="ConformityFunction.h" />
     <ClInclude Include="custom_types.h" />
+    <ClInclude Include="Power.h" />
     <ClInclude Include="RandIndProbGenerator.h" />
     <ClInclude Include="SocialSystem.h" />
     <ClInclude Include="Uniform.h" />
