--- a/norm_formation_abm/norm_formation_abm.vcxproj.filters
+++ b/norm_formation_abm/norm_formation_abm.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="Power.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="SymmeticPower.cpp">
+    <ClCompile Include="SymmetricPower.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
@@ -68,7 +68,7 @@
     <ClInclude Include="Power.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="SymmeticPower.h">
+    <ClInclude Include="SymmetricPower.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
