--- a/norm_formation_abm/norm_formation_abm.vcxproj.filters
+++ b/norm_formation_abm/norm_formation_abm.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Agent.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="RandIndProbGenerator.cpp">
+    <ClCompile Include="RandNProbGenerator.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
     <ClCompile Include="BernoulliDistribution.cpp">
@@ -53,7 +53,7 @@
     <ClInclude Include="Agent.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="RandIndProbGenerator.h">
+    <ClInclude Include="RandNProbGenerator.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="custom_types.h">
