MovingUniform empty class added

--- a/norm_formation_abm/norm_formation_abm.vcxproj
+++ b/norm_formation_abm/norm_formation_abm.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Agent.cpp" />
     <ClCompile Include="BernoulliDistribution.cpp" />
     <ClCompile Include="IndividualLearning.cpp" />
+    <ClCompile Include="MovingUniform.cpp" />
     <ClCompile Include="ResponseFunction.cpp" />
     <ClCompile Include="Logistic.cpp" />
     <ClCompile Include="norm_formation_abm.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Agent.h" />
     <ClInclude Include="BernoulliDistribution.h" />
     <ClInclude Include="IndividualLearning.h" />
+    <ClInclude Include="MovingUniform.h" />
     <ClInclude Include="ResponseFunction.h" />
     <ClInclude Include="custom_types.h" />
     <ClInclude Include="Logistic.h" />
